<resources>
    <string name="app_name">ShoeStore</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo_description">Shoe Store Logo</string>

    <!--    LOGIN-->
    <string name="login">LOG IN</string>
    <string name="register">REGISTER</string>
    <string name="logOut">Logout</string>
    <string name="hint_username">username</string>
    <string name="hint_password">password</string>

    <!--    WELCOME-->
    <string name="welcome_text">Welcome %s!</string>
    <string name="welcome_description">Welcome to the Shoe Store!</string>
    <string name="jump_to_instructions">Check Instructions</string>
    <string name="welcome_quote">Welcome out of the cave, my friend.\nIt\'s a bit colder out here, but the stars are just beautiful.\n\n - Plato</string>

    <!--    INSTRUCTION-->
    <string name="instruction_header">Follow Instructions</string>
    <string name="instruction_text">Create, store and list your shoes!\n\n\n
        Click on the button down here, and navigate to your list of shoes.\n\n
        If you want to add a new one, just press the plus button in the right corner.\n\n
        Saving your shoe will automatically land you back to your shoe list with your new fancy shoe added to the store.
    </string>
    <string name="go_to_shoe_list">Go To Shoe List</string>

    <!-- SHOE VALIDATION -->
    <string name="incomplete_shoe_data">Shoe cannot be saved! Please fill all values!</string>
    <string name="existing_shoe_data">This shoe already exists in database!</string>

    <!-- SHOE LIST -->
    <string name="no_shoes_added">You don\'t have any shoes yet</string>
    <string name="shoe_list_size_label">SIZE</string>

    <!-- SHOE DETAIL -->
    <string name="shoe_detail_title">Add a shoe</string>
    <string name="hint_shoe_name">Shoe Name</string>
    <string name="hint_company_name">Company Name</string>
    <string name="hint_shoe_size">Shoe Size</string>
    <string name="hint_shoe_description">Description</string>
    <string name="cancel_shoe_creation">Cancel</string>
    <string name="save_created_shoe">Save</string>

</resources>
