<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <!--    Using Constraint Layout for well positioning without using weights-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".instruction.instructionFragment">

        <TextView
            android:id="@+id/instructionHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginTop="@dimen/largeMargin"
            android:layout_marginEnd="@dimen/defaultMargin"
            android:fontFamily="@font/audiowide"
            android:text="@string/instruction_header"
            android:textColor="@color/darkBlue"
            android:textSize="@dimen/largeTextSize"
            app:layout_constraintBottom_toTopOf="@+id/instructionText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="@dimen/half"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/instructionText"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/mediumMargin"
            android:layout_marginEnd="@dimen/mediumMargin"
            android:fontFamily="sans-serif"
            android:text="@string/instruction_text"
            android:textAlignment="viewStart"
            android:textSize="@dimen/mediumTextSize"
            android:textStyle="italic"
            app:layout_constraintBottom_toTopOf="@+id/shoeListButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="@dimen/half"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructionHeader" />

        <Button
            android:id="@+id/shoeListButton"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/defaultMargin"
            android:layout_marginEnd="@dimen/defaultMargin"
            android:text="@string/go_to_shoe_list"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="@dimen/half"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructionText" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>